--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "ailayout",
+  "name": "meetyourfriends",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^13.4.19",
     "leaflet": "^1.9.4",
     "sqlite3": "^5.1.6",
-    "sqlite": "^5.0.1"
+    "sqlite": "^5.0.1",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "typescript": "^5.1.6",
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "@types/leaflet": "^1.9.3",
     "@types/sqlite3": "^3.1.8",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^3.3.3",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.19"
   }
 }
