--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sqlite3": "^5.1.6",
     "sqlite": "^5.0.1",
     "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.28"
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
@@ -25,7 +26,6 @@
     "@types/react-dom": "^18.2.7",
     "@types/leaflet": "^1.9.3",
     "@types/sqlite3": "^3.1.8",
-    "tailwindcss": "^3.3.3",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19"
   }
